// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-language should delete a language 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`delete-language should handle non-existent language 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
